--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "firebase": "^9.23.0",
     "formik": "^2.4.2",
+    "i18next": "^23.2.6",
+    "i18next-http-backend": "^2.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.1",
     "sass": "^1.63.4"
   },
   "devDependencies": {
